# yfit

./: .coverage  .coveragerc  .env.ci  .gitignore  COMMIT_EDITMSG  Dockerfile  FETCH_HEAD  Makefile  ORIG_HEAD  Pipfile  README.md  config  docker-compose.yml  heroku.yml  index  manage.py  run_manage.sh  run_tests.sh
backend/: .env.example  .gitignore  Procfile  deployment-tasks.sh  pyproject.toml  requirements.txt
backend/dating/migrations/: 0003_auto_20200816_0603.py  0006_delete_setting.py
backend/home/migrations/: 0005_auto_20200806_0657.py
backend/notification_app/: receiver.py
backend/scripts/: is_database_ready.py
backend/trainer_classes/: admin.py  tasks.py  views.py
backend/trainer_classes/migrations/: 0003_auto_20210205_1949.py  0004_auto_20210212_0931.py  0005_auto_20210218_1416.py  0007_auto_20210301_1228.py  0008_auto_20210302_1303.py  0012_auto_20210412_1731.py  0014_remove_notification_all_client.py  0015_auto_20210507_1220.py  0018_trainerclass_slug.py  0021_notification_email_subject.py  0023_auto_20210615_1038.py  0030_auto_20210708_1011.py  0035_auto_20210904_2031.py  0041_auto_20210924_1614.py
backend/undercard_18898/: cachefile_strategy.py  celery.py  settings.py  storage_backends.py  wsgi.py
backend/undercard_push/migrations/: 0005_clientclasssignuppushlog.py  0006_auto_20210913_1424.py
backend/undercard_push/models/: __init__.py  compat.py
backend/users/: models.py
backend/users/migrations/: 0003_auto_20200804_0612.py  0007_paymentdetail_subscription_id.py  0010_auto_20200907_1350.py  0021_user_referral_code.py  0033_payment.py  (+10 more)
(+857 files in other folders)
